# MerXen

./: .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  CLAUDE.md  Dockerfile  README.md  environment.alignment.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cli.md  configuration.md  development.md  getting-started.md  index.md  outputs.md  pipeline.md  python-api.md  running-the-pipeline.md  samplesheet.md
docs/stages/: alignment.md  clustering-squidpy.md  comparison.md  cortical-depth.md  enrichment.md  mapmycells.md  qc.md  segmentation.md  spatialdata-build.md  visualization.md
notebooks/: P7513_alignment_overlay_interactive.ipynb  P7513_assignment_rate_bar_interactive.ipynb  P7513_cellpose_area_cutoff_explorer.ipynb  P7513_clustering_squidpy_interactive.ipynb  P7513_merscope_table_vs_proseg_clustering_squidpy.ipynb  P7513_sanity_overlay_interactive.ipynb  bulkseq_spatial_tpm_cpm_spearman.ipynb  clustering_squidpy_parameter_tuning.ipynb  median_cell_qc_by_platform_segmentation.ipynb  spateo_alignment_parameter_tuning.ipynb
scripts/: cleanup_assignment_tables_and_outputs.py  run_ci_checks.sh
src/merxen/: config.py  mask_image_quantification.py  path_utils.py  plotting.py
src/merxen/alignment/: __init__.py  dependencies.py  features.py  pipeline.py  qc.py  register.py  transforms.py
src/merxen/analysis/: __init__.py  clustering_squidpy.py  mapmycells.py
src/merxen/cli/: __init__.py  run_alignment.py  run_build_spatialdata.py  run_clustering_squidpy.py  run_comparison.py  run_enrichment.py  run_mapmycells.py  run_mask_image_quantification.py  run_qc.py  run_segmentation.py  run_visualization.py
src/merxen/cortical_depth/: assign_cells.py  equivolumetric.py  pipeline.py  plotting.py  ribbon.py  streamlines.py
src/merxen/enrichment/: assignment.py  enrich.py
src/merxen/io/: image_source.py  samplesheet.py  spatialdata_io.py  transcript_io.py
src/merxen/io/builders/: merscope.py  pipeline.py
src/merxen/monitoring/: __init__.py  gpu_vram.py
src/merxen/qc/: __init__.py  gene_comparison.py  metrics.py
src/merxen/segmentation/: cellpose.py  mask_filter.py  pipeline.py  proseg.py
src/merxen/visualization/: __init__.py  density_overview.py  gene_scatter.py  qc_plots.py  sanity_plots.py
tests/test_alignment/: test_pipeline.py  test_register.py  test_transforms_qc.py
tests/test_analysis/: __init__.py  test_clustering_squidpy.py  test_mapmycells.py
tests/test_cortical_depth/: __init__.py  test_cortical_depth.py
tests/test_enrichment/: test_assignment.py  test_enrich_paths.py  test_merscope_images.py
tests/test_io/: test_image_source.py  test_samplesheet.py  test_spatialdata_build.py  test_spatialdata_io.py  test_transcript_io.py
tests/test_mask_image_quantification/: __init__.py  test_quantification.py
tests/test_monitoring/: test_gpu_vram.py
tests/test_qc/: test_gene_comparison.py  test_metrics.py
tests/test_segmentation/: test_mask_filter.py  test_merscope_projection.py  test_output_paths.py
tests/test_visualization/: test_density_overview.py  test_gene_scatter.py  test_qc_plots.py  test_sanity_plots.py
tests/test_workflows/: test_analysis_segmentation_branches.py  test_clustering_squidpy_module.py
workflows/: main.nf  nextflow.config  samplesheet.example.csv
workflows/modules/: alignment.nf  clustering_squidpy.nf  comparison.nf  compute_cortical_depth.nf  enrichment.nf  mapmycells.nf  proseg_bootstrap.nf  qc.nf  segmentation.nf  spatialdata_build.nf  visualization.nf
