[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merxen"
version = "0.1.0"
description = "Pre-processing, segmentation, and comparative analysis of paired MERSCOPE and Xenium spatial transcriptomics datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0",
    "geopandas>=1.0",
    "anndata>=0.10",
    "spatialdata>=0.8.0",
    "spatialdata-io>=0.6",
    "xarray>=2024.0",
    "cellpose>=3.0",
    "scikit-image>=0.22",
    "scipy>=1.12",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scanpy>=1.10",
    "squidpy>=1.6",
    "cell_type_mapper @ git+https://github.com/AllenInstitute/cell_type_mapper@v1.5.5",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "tqdm>=4.60",
    "psutil>=5.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1",
    "zarr>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "bump-my-version>=1.3",
]
alignment = [
    "dynamo-release @ git+https://github.com/aristoteleo/dynamo-release.git@v1.5.3",
    "spateo-release @ git+https://github.com/aristoteleo/spateo-release.git@1bd8a35e6e7b0dfc712d76b1c32987dc06652774",
]
# Install with: pip install -e ".[gpu]" --extra-index-url=https://pypi.nvidia.com
gpu = [
    "rapids-singlecell-cu12[rapids]",
]

[project.scripts]
merxen = "merxen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
merxen = ["assets/fonts/*.ttf"]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = false
tag = false
tag_name = "v{new_version}"
message = "[chore]: bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/merxen/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 88
src = ["src"]
exclude = ["notebooks/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (public functions)
]
ignore = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["merxen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = [
    "ignore:Call to deprecated class Scaler.*:DeprecationWarning:ome_zarr\\.writer",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
